[project]
name = "ai-server"
version = "0.1.0"
description = "AI agent server — FastAPI + LangGraph + Postgres checkpointer"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "langchain>=1.0.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-mcp-adapters>=0.3.0",
    "langfuse>=4.12.0",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-postgres>=3.1.0",
    "numpy>=2.5.1",
    "psycopg[binary,pool]>=3.3.4",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
