[project]
name = "ingestion"
version = "0.1.0"
description = "Standalone resume-writing guidance ingestion pipeline — chunks, embeds, and upserts a curated corpus into Qdrant"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.7",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
